--- a/src/app/pages/components/schedules-detailed/schedule-detailed-header/schedule-detailed-header.component.html
+++ b/src/app/pages/components/schedules-detailed/schedule-detailed-header/schedule-detailed-header.component.html
@@ -9,8 +9,8 @@
 
   <ng-container *ngIf="!singleScheduleMode">
     <md-icon class="search-icon">search</md-icon>
-    <md-input-container>
-      <input class="search-input" md-input type="text" placeholder="Filter Product Schedules" (input)="filterChanged.emit($event.target.value)">
+    <md-input-container [floatingPlaceholder]="false">
+      <input class="search-input" md-input type="text" placeholder="Filter Items" (input)="filterChanged.emit($event.target.value)">
     </md-input-container>
     <div class="divider"></div>
   </ng-container>
@@ -28,4 +28,8 @@
 
   <div class="zoom-label">Zoom</div>
   <input (mousewheel)="mouseWheel($event)" type="range" min="1" max="10" step="1" value="{{zoomLevel}}" (change)="zoomChanged.emit($event.target.value)">
+
+  <div class="divider"></div>
+
+  <md-icon [class.info--active]="infoEnabled" (click)="infoEnabledChanged.emit(!infoEnabled)">info</md-icon>
 </div>
