--- a/src/app/pages/components/schedules-detailed/schedule-detailed-header/schedule-detailed-header.component.scss
+++ b/src/app/pages/components/schedules-detailed/schedule-detailed-header/schedule-detailed-header.component.scss
@@ -22,16 +22,22 @@
     height: 100%;
     width: 230px;
     border-right: 1px solid rgba(0,0,0,0.2);
-    transition: 0.25s ease-in-out;
+    transition: 0.15s ease-in-out;
     overflow: hidden;
 
     &--hidden {
-      width: 42px;
-      transition: 0.25s ease-in-out;
+      width: 45px;
+      transition: 0.15s ease-in-out;
+
+      md-icon {
+        margin: auto !important;
+        padding: 2px;
+        border: 1px solid rgba(0,0,0,0.2);
+      }
     }
 
     span {
-      margin-left: 15px;
+      margin-left: 25px;
       color: rgba(0,0,0,0.87);
       font-weight: 500;
     }
@@ -99,6 +105,10 @@
   margin-left: 8px;
 }
 
+.info--active {
+  color: #4A90E2 !important;
+}
+
 input[type=range] {
   -webkit-appearance: none;
   margin: 5.8px 0;
@@ -110,13 +120,13 @@ input[type=range]::-webkit-slider-runnable-track {
   width: 100%;
   height: 2.4px;
   cursor: pointer;
-  box-shadow: 0px 0px 0px #000000, 0px 0px 0px #0d0d0d;
+  box-shadow: 0 0 0 #000000, 0 0 0 #0d0d0d;
   background: #fd572f;
   border-radius: 9.9px;
-  border: 0px solid #c56e01;
+  border: 0 solid #c56e01;
 }
 input[type=range]::-webkit-slider-thumb {
-  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0), 0px 0px 1px rgba(13, 13, 13, 0);
+  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0), 0 0 1px rgba(13, 13, 13, 0);
   border: 1px solid rgba(0, 0, 0, 0);
   height: 14px;
   width: 14px;
@@ -133,13 +143,13 @@ input[type=range]::-moz-range-track {
   width: 100%;
   height: 2.4px;
   cursor: pointer;
-  box-shadow: 0px 0px 0px #000000, 0px 0px 0px #0d0d0d;
+  box-shadow: 0 0 0 #000000, 0 0 0 #0d0d0d;
   background: #fd572f;
   border-radius: 9.9px;
-  border: 0px solid #c56e01;
+  border: 0 solid #c56e01;
 }
 input[type=range]::-moz-range-thumb {
-  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0), 0px 0px 1px rgba(13, 13, 13, 0);
+  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0), 0 0 1px rgba(13, 13, 13, 0);
   border: 1px solid rgba(0, 0, 0, 0);
   height: 14px;
   width: 14px;
@@ -157,18 +167,18 @@ input[type=range]::-ms-track {
 }
 input[type=range]::-ms-fill-lower {
   background: #fd572f;
-  border: 0px solid #c56e01;
+  border: 0 solid #c56e01;
   border-radius: 19.8px;
-  box-shadow: 0px 0px 0px #000000, 0px 0px 0px #0d0d0d;
+  box-shadow: 0 0 0 #000000, 0 0 0 #0d0d0d;
 }
 input[type=range]::-ms-fill-upper {
   background: #fd572f;
-  border: 0px solid #c56e01;
+  border: 0 solid #c56e01;
   border-radius: 19.8px;
-  box-shadow: 0px 0px 0px #000000, 0px 0px 0px #0d0d0d;
+  box-shadow: 0 0 0 #000000, 0 0 0 #0d0d0d;
 }
 input[type=range]::-ms-thumb {
-  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0), 0px 0px 1px rgba(13, 13, 13, 0);
+  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0), 0 0 1px rgba(13, 13, 13, 0);
   border: 1px solid rgba(0, 0, 0, 0);
   height: 14px;
   width: 14px;
