--- a/src/app/shared/components/autocomplete-input/autocomplete-input.component.html
+++ b/src/app/shared/components/autocomplete-input/autocomplete-input.component.html
@@ -1,6 +1,6 @@
 <div class="default-autocomplete-input">
   <div class="default-autocomplete-input__input">
-    <md-input-container [class.default-autocomplete-input__input--full-width]="fullWidth">
+    <md-input-container [floatingPlaceholder]="floatingPlaceholder" [class.default-autocomplete-input__input--full-width]="fullWidth">
       <input #input md-input autocomplete=off auto-focus [applyAutofocus]="applyAutofocus" (ngModelChange)="change($event)" (input)="valueChanged.emit($event)" [ngModel]="currentValue" (keydown)="onKey($event)" [required]="required" (blur)="blurred()" (focus)="focused()" (click)="focused()" [disabled]="disabled" placeholder="{{placeholder}}" type="text">
     </md-input-container>
     <md-icon [class.rotated]="showOptions" *ngIf="showArrow" (click)="arrowClicked(input)">keyboard_arrow_down</md-icon>
