Dashboard dual graph stuff

--- a/src/app/pages/dashboard-page/dashboard-dual-graph/dashboard-dual-graph.component.html
+++ b/src/app/pages/dashboard-page/dashboard-dual-graph/dashboard-dual-graph.component.html
@@ -1,3 +1,4 @@
-<div>
+<div class="dashboard-dual-graph-container">
   <chart *ngIf="options" #chartI class="dashboard-chart" [options]="options" (load)="loadChart(chartI)"></chart>
+  <div class="dashboard-chart-footer" *ngIf="options && chartInstance"></div>
 </div>
