--- a/src/assets/scss/_entity-view.scss
+++ b/src/assets/scss/_entity-view.scss
@@ -1087,3 +1087,9 @@ $blue-color: #4A90E2;
     min-height: 470px;
   }
 }
+
+.tab-container--no-header {
+  md-tab-header {
+    display: none;
+  }
+}
