--- a/src/app/pages/components/schedules-detailed/schedule-details/schedule-details.component.scss
+++ b/src/app/pages/components/schedules-detailed/schedule-details/schedule-details.component.scss
@@ -1,5 +1,5 @@
 $primary-blue-color: #5383C3;
-$container-width: 320px;
+$container-width: 350px;
 
 .schedule-details {
   width: $container-width;
@@ -15,23 +15,38 @@ $container-width: 320px;
   }
 }
 
+.schedule-tab-header {
+  display: flex;
+  height: 50px;
+  align-items: center;
+  font-size: 16px;
+  background-color: $primary-blue-color;
+
+  div {
+    cursor: pointer;
+    margin: 0 15px;
+    color: #A7BEE0;
+    border-bottom: 4px solid rgba(0,0,0,0);
+    line-height: 46px;
+  }
+
+  .selected {
+    color: white;
+    border-color: #43C3F9;
+  }
+}
+
 .schedule-container {
   width: $container-width;
 
   &__schedule-details {
-    .header {
-      display: flex;
-      align-items: center;
-      padding: 12px 12px 0;
-      font-size: 18px;
 
-      div {
-        cursor: pointer;
-      }
+    .header {
+      padding: 16px 12px 2px;
     }
 
     .body {
-      padding: 12px;
+      padding: 6px 12px 12px;
 
       .body__row {
         display: flex;
@@ -64,96 +79,7 @@ $container-width: 320px;
     }
   }
 
-  &__header {
-    display: flex;
-    padding: 0 12px;
-    align-items: center;
-    height: 45px;
-    background: $primary-blue-color;
-    color: white;
-    font-size: 18px;
-
-    md-icon {
-      cursor: pointer;
-    }
-
-    .close-icon {
-      margin-right: 8px;
-    }
-
-    .menu-icon {
-      margin-left: auto;
-    }
-  }
-
-  &__subheader {
-    display: flex;
-    background: $primary-blue-color;
-    align-items: center;
-    padding: 0 15px;
-  }
-
-  &__ship-info {
-    display: flex;
-    flex-direction: column;
-    box-sizing: border-box;
-    color: white;
-    font-weight: 500;
-    height: 180px;
-
-    div {
-      &:first-of-type {
-        font-size: 12px;
-        margin-top: auto;
-        padding-left: 32px;
-        margin-bottom: 6px;
-        color: #ABC2E1;
-      }
-
-      &:last-of-type {
-        display: flex;
-        align-items: center;
-        margin-bottom: auto;
-
-        md-icon {
-          font-size: 20px;
-          height: 20px;
-          width: 20px;
-          color: #ABC2E1;
-        }
-
-        span {
-          margin-left: 12px;
-          font-size: 20px;
-        }
-      }
-    }
-  }
-
-  .image {
-    display: flex;
-    margin-left: auto;
-    width: 90px;
-    height: 90px;
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    border-radius: 50%;
-  }
-
   &__items {
-    .header {
-      display: flex;
-      align-items: center;
-      padding: 15px 12px;
-      font-size: 18px;
-
-      div:nth-of-type(2) {
-        margin-left: auto;
-        font-size: 12px;
-        cursor: pointer;
-      }
-    }
 
     .item {
       display: flex;
