--- a/src/app/pages/dashboard-page/dashboard.component.html
+++ b/src/app/pages/dashboard-page/dashboard.component.html
@@ -4,6 +4,7 @@
                     [queries]="queries"
                     [selectedQuery]="selectedQuery"
                     [timeFilters]="timeFilters"
+                    [quote]="quote"
                     (campaignSelected)="selectCampaign($event)"
                     (querySelected)="selectQuery($event)"
                     (timeFilterSelected)="selectTimeFilter($event)">
